--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 /bin/
-/src/application/MyCredentials.java
-/.gradle/
-/build/
+/src/main/java/MyCredentials.java
+.gradle/
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
