--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     
     compile "net.dean.jraw:JRAW:1.1.0"
+    compile group: 'org.yaml', name: 'snakeyaml', version: '1.23'
 }
