Added configuration items for notification switching

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,7 @@ oauthClient: wB2mALpNvDm76g
 nsfwFilteringEnabled: true
 alertSoundEnabled: true
 alertSoundVolume: 0.2
+notificationsEnabled: true
 keywordList:
     - giveaway
     - steam key
