Added blacklisted subreddits to the configuration

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,3 +15,7 @@ keywordList:
     - extra key
     - extra code
     - give away
+blacklistedSubreddits:
+	- wholesomegifs
+	- childrenfallingover
+	- fffffffuuuuuuuuuuuu
