Added a keyword blacklist, resolves #28

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -20,3 +20,6 @@ blacklistedSubreddits:
     - wholesomegifs
     - childrenfallingover
     - fffffffuuuuuuuuuuuu
+blacklistedKeywords:
+    - fake
+    - us only
